Small fix in slides
Correct filename and procedure for Rmd files.

--- a/slides/RTutorial.tex
+++ b/slides/RTutorial.tex
@@ -37,9 +37,13 @@
 \begin{frame}{Ideme na to...}
 	\begin{itemize}
 		\item Otvorte si v prehliadači stránku \texttt{https://www.github.com/PKvasnick/RTutorial/} a stiahnite si z adresára \texttt{code} všetky súbory \texttt{*.Rmd}.
+		\begin{itemize}
+			\item Preklikajte sa k súboru a zvoľte \emph{Raw} zobrazenie.
+			\item Pravý klik a \emph{Save As...}. Je to čisto textový súbor.
+		\end{itemize}
 		\item Odporúčam vytvoriť si podobnú adresárovú štruktúru ako v mojom repozitári.
 		\item (Úplne najlepšie) Môžete si tiež vytvoriť klon môjho repozitára pomocou GitHub Desktopu.
-		\item Spustite RStudio, \texttt{File->Open...} a nájdite súbor .\texttt{R-Intro.Rmd}
+		\item Spustite RStudio, \texttt{File->Open...} a nájdite súbor .\texttt{R01\_PrveKroky.Rmd}
 	\end{itemize}
 \end{frame}
 
